--- a/_site.yml
+++ b/_site.yml
@@ -3,12 +3,16 @@ output_dir: "."
 navbar:
   title: "Home"
   right:
-    - text: "About"
+    - text: "About me"
       href: about.html
     - icon: fa-envelope fa-lg
       href: mailto:<yifeixu0306@gmail.com>
     - icon: fa-github fa-lg
-      href: http://github.com/<yifeixu0306>/
+      href: http://github.com/yifeixu0306/
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/yifei-xu-6190b6228/
 output:
   html_document:
     theme: lumen
+    
+    
