--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   title: "Home"
   right:
     - text: "About me"
-      href: About.html 
+      href: about.html 
     - icon: fa-envelope fa-lg
       href: mailto:<yifeixu0306@gmail.com>
     - icon: fa-github fa-lg
